--- a/index.html
+++ b/index.html
@@ -1,24 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVG Editor</title>
+
+
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/main.js" type="module" defer></script>
+
 </head>
+
 <body>
     <div class="container">
-        <div class="editor">
-            <svg>
-                <defs>
-                    <linearGradient id="Gradient-1">
-                        <stop offset="0%" stop-color="#bbc42a" />
-                        <stop offset="100%" stop-color="#765373" />
-                    </linearGradient>
-                </defs>
-                <rect x="10" y="10" width="200" height="100" fill= "url(#Gradient-1)" stroke="#333333" stroke-width="3px" />
-            </svg>
+        <div id="editor">
+            
+        </div>
+        <div class="menu">
+            <h1 class="title_menu">Menu SVG</h1>
+            <div class="container_menu">
+                <div id="add_menu">
+                    <button id="add_text">Ajouter du texte</button>
+                    <button id="add_rect">Ajouter un rectangle</button>
+                    <button id="add_circle">Ajouter un cercle</button>
+                </div>
+                <div id="text_menu">
+                    <div class="text_content">
+                        <Label>Texte contenue</Label>
+                        <input type="text" id="input_text">
+                        <Label>Taille de la police</Label>
+                        <input type="number" id="input_font">
+                        <Label>Couleur du text</Label>
+                        <Label>Utiliser un gradient : <input type="checkbox" name="" id="input_gradient_checkbox"></Label>
+                        <div id="text_simple_color">
+                            <input type="color" id="input_text_color">
+                        </div>
+                        <div id="text_gradient">
+                            <label>Couleur début : <input type="color" id="input_text_gradient_1"></label>
+                            <label>Couleur centre : <input type="color" id="input_text_gradient_2"></label>
+                            <label>Couleur fin : <input type="color" id="input_text_gradient_3"></label>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
